[package]
name = "fatahh"
version = "1.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
mimalloc = "0.1.43"
tabled = "0.17.0"
walkdir = "2.5.0"

[build]
rustflags = ["-C", "target-cpu=native", "-C", "link-arg=-fuse-ld=lld", "-Z", "threads=8"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = "symbols"
