[package]
name = "fatahh"
version = "2.0.0"
edition = "2024"

[dependencies]
rayon = "1.11.0"
clap = { version = "4.5.54", features = ["derive"] }
tabled = "0.20.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false
overflow-checks = false
debug = false
